refactored some classes as per PMD reports Signed-off-by: asad <asad@ebi.ac.uk>